concord_macros/tests/trybuild/fail/codegen/stream_endpoint_execute_records.stderr
error[E0277]: the trait bound `StreamResponse<concord_core::advanced::OctetStream>: concord_core::request::RecordResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_records.rs:16:28
   |
16 |     let _ = api.download().execute_records().await.unwrap();
   |                            ^^^^^^^^^^^^^^^ the trait `concord_core::request::RecordResponseKind` is not implemented for `StreamResponse<concord_core::advanced::OctetStream>`
   |
help: the trait `concord_core::request::RecordResponseKind` is implemented for `RecordStream<T>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<T> RecordResponseKind for RecordStream<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_records`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_records<R>(self) -> Result<R, ApiClientError>
   |                  --------------- required by a bound in this associated function
...
   |         R: RecordResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_records`

error[E0277]: the trait bound `StreamResponse<concord_core::advanced::OctetStream>: concord_core::request::RecordResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_records.rs:16:13
   |
16 |     let _ = api.download().execute_records().await.unwrap();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `concord_core::request::RecordResponseKind` is not implemented for `StreamResponse<concord_core::advanced::OctetStream>`
   |
help: the trait `concord_core::request::RecordResponseKind` is implemented for `RecordStream<T>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<T> RecordResponseKind for RecordStream<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_records`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_records<R>(self) -> Result<R, ApiClientError>
   |                  --------------- required by a bound in this associated function
...
   |         R: RecordResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_records`

error[E0277]: the trait bound `StreamResponse<concord_core::advanced::OctetStream>: concord_core::request::RecordResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_records.rs:16:46
   |
16 |     let _ = api.download().execute_records().await.unwrap();
   |                                              ^^^^^ the trait `concord_core::request::RecordResponseKind` is not implemented for `StreamResponse<concord_core::advanced::OctetStream>`
   |
help: the trait `concord_core::request::RecordResponseKind` is implemented for `RecordStream<T>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<T> RecordResponseKind for RecordStream<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_records`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_records<R>(self) -> Result<R, ApiClientError>
   |                  --------------- required by a bound in this associated function
...
   |         R: RecordResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_records`
